fix: Remove includedFiles from vercel.json functions config

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
     "app/api/**/*.js": {
-      "runtime": "nodejs18.x",
-      "includedFiles": ["app/api/send_email.py"]
+      "runtime": "nodejs18.x"
     }
   }
 }
