--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-google-maps/api": "^2.20.7",
     "@sendgrid/mail": "^8.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
