--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "dev-no-turbopack": "next dev"
+    "lint": "eslint"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.22.0",
@@ -26,15 +25,16 @@
     "@sendgrid/mail": "^8.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.16",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
-    "next": "15.5.3",
+    "next": "15.5.7",
     "nodemailer": "^7.0.10",
     "pg-god": "^1.0.12",
     "react": "19.1.0",
