--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vercel": "^50.1.3"
   }
 }
